done with session1 s5. For the love of god copy every code you did in s4 here

--- a/s5/everything.ipynb
+++ b/s5/everything.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,8 @@
     "        ###     - Use `pad_sents_char()` from utils.py, which pads all words to max_word_length of all words in the batch,\n",
     "        ###       and pads all sentences to max length of all sentences in the batch. Read __init__ to see how to get\n",
     "        ###       index of character-padding token\n",
-    "        sents_var = torch.Tensor(pad_sents_char(list_of_indices,self.char_pad)).permute(1,0,2)\n",
+    "        sents_var = torch.tensor(pad_sents_char(list_of_indices,self.char_pad),dtype=torch.long, device=device).permute(1,0,2)\n",
+    "        sents_var = sents_var.contiguous()\n",
     "        ###     - Connect these two parts to convert the resulting padded sentences to a torch tensor.\n",
     "        return sents_var\n",
     "        ### HINT:\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +256,7 @@
        " [[1, 12, 2], [1, 40, 43, 44, 52, 2]]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +277,7 @@
        "['{', 'k', 'n', 'o', 'w', '}']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,61 +288,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.],\n",
-       "         [ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.]],\n",
+       "tensor([[[ 1, 12,  2,  0,  0,  0,  0,  0],\n",
+       "         [ 1, 12,  2,  0,  0,  0,  0,  0]],\n",
        "\n",
-       "        [[ 1., 41., 44., 51., 34., 34., 34.,  2.],\n",
-       "         [ 1., 40., 43., 44., 52.,  2.,  0.,  0.]],\n",
+       "        [[ 1, 41, 44, 51, 34, 34, 34,  2],\n",
+       "         [ 1, 40, 43, 44, 52,  2,  0,  0]],\n",
        "\n",
-       "        [[ 1., 54., 44., 50.,  2.,  0.,  0.,  0.],\n",
-       "         [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]]])"
+       "        [[ 1, 54, 44, 50,  2,  0,  0,  0],\n",
+       "         [ 0,  0,  0,  0,  0,  0,  0,  0]]], device='cuda:0')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp1 = torch.Tensor(temp.to_input_tensor_char([['I','loveee','you'],['I','know']],1))\n",
+    "temp1 = temp.to_input_tensor_char([['I','loveee','you'],['I','know']],torch.device('cuda:0'))\n",
     "temp1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.],\n",
-       "         [ 1., 41., 44., 51., 34., 34., 34.,  2.],\n",
-       "         [ 1., 54., 44., 50.,  2.,  0.,  0.,  0.]],\n",
-       "\n",
-       "        [[ 1., 12.,  2.,  0.,  0.,  0.,  0.,  0.],\n",
-       "         [ 1., 40., 43., 44., 52.,  2.,  0.,  0.],\n",
-       "         [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp1.permute(1,0,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +325,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,15 +336,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## code for highway"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -379,15 +358,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](../images/ex5_2.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class Highway(nn.Module):\n",
@@ -400,8 +383,9 @@
     "    def forward(self,x_conv_out):\n",
     "        \"\"\"\n",
     "         \n",
-    "        raw_input: (max_sentence_length,bs,max_word_length aka m)\n",
+    "        raw_input x_padded: (max_sentence_length,bs,max_word_length aka m)\n",
     "        which should be output of to_input_tensor_char()\n",
+    "        \n",
     "        --char_emb()-->\n",
     "        x_emb: (max_sentence_length,bs,max_word_length,e_char)\n",
     "        with e_char is size of character embedding. \n",
@@ -435,8 +419,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# test highway\n",
@@ -447,8 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -456,7 +444,7 @@
        "torch.Size([4, 3, 2])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,35 +455,57 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## code for cnn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
-    "    def __init__(self,e_char,e_word,k):\n",
+    "    def __init__(self,e_char,e_word,k=5,padding=1):\n",
     "        super().__init__()\n",
-    "        self.conv1d = nn.Conv1d(e_char,e_word,k)\n",
+    "        self.conv1d = nn.Conv1d(e_char, e_word, kernel_size = k, padding = padding)\n",
+    "        self.mp1d = nn.AdaptiveMaxPool1d(1)\n",
     "    def forward(self,x_reshaped):\n",
     "        \"\"\"\n",
     "        input: x_reshaped: (max_sentence_length,bs,e_char,max_word_length)\n",
     "        \n",
-    "        output: x_conv: (max_sentence_length,bs,e_word,max_word_length-k+1)\n",
-    "        with k is kernel size,e_word is the desired word embedding size\n",
+    "        output:  x_conv_out: (max_sentence_length,bs,e_word)\n",
+    "            - e_word is the desired word embedding size\n",
+    "        \"\"\"\n",
     "        \n",
-    "        \"\"\""
+    "        x_conv_out = []\n",
+    "        for each_sen in torch.split(x_reshaped,1,dim=0):\n",
+    "            each_sen = each_sen.squeeze(dim=0)\n",
+    "            \n",
+    "            x_conv = self.conv1d(each_sen) # (bs,e_word,max_word_length-k+1). \n",
+    "            #relu\n",
+    "            result = F.relu(x_conv) # (bs,e_word,max_word_length-k+1)\n",
+    "            #maxpool\n",
+    "            result = self.mp1d(result).squeeze(2) # (bs,e_word,1) to (bs,e_word) after squeezing\n",
+    "            \n",
+    "            x_conv_out.append(result)\n",
+    "            \n",
+    "        x_conv_out = torch.stack(x_conv_out,dim=0)\n",
+    "        \n",
+    "        return x_conv_out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# test cnn\n",
@@ -504,8 +514,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "temp_w = temp_conv.weight.data\n",
@@ -514,8 +526,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "temp_x = torch.randn(1, 3, 2) # bs,in_channels aka emb size,number_of_items"
@@ -523,19 +537,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.2538],\n",
-       "         [-0.0983],\n",
-       "         [ 0.3462],\n",
-       "         [ 0.8006]]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[[ 0.8009],\n",
+       "         [ 0.6760],\n",
+       "         [-0.6823],\n",
+       "         [ 0.4786]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,8 +563,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -556,7 +574,7 @@
        "torch.Size([1, 4, 1])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,22 +585,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.2538)"
+       "tensor(0.8009)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# manual calculation\n",
     "(temp_w[0] * temp_x[0]).sum() + temp_b[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# testing cnn + maxpool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "temp_conv = nn.Conv1d(3,4,2)\n",
+    "temp_x = torch.randn(2, 3, 4)\n",
+    "temp3 = temp_conv(temp_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[-0.5329,  0.4910,  0.0598],\n",
+       "          [ 0.0499, -0.5043, -0.3861],\n",
+       "          [-0.2685, -0.0789,  0.1039],\n",
+       "          [ 0.2366, -0.5926,  0.2580]],\n",
+       " \n",
+       "         [[ 0.6947,  0.2658, -0.0774],\n",
+       "          [ 0.0486, -0.1823, -0.0855],\n",
+       "          [ 0.1561, -0.0336, -0.4129],\n",
+       "          [-0.4210, -0.1116, -0.0181]]], grad_fn=<SqueezeBackward1>),\n",
+       " torch.Size([2, 4, 3]))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp3,temp3.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "temp_mp = nn.AdaptiveMaxPool1d(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[ 0.4910],\n",
+       "          [ 0.0499],\n",
+       "          [ 0.1039],\n",
+       "          [ 0.2580]],\n",
+       " \n",
+       "         [[ 0.6947],\n",
+       "          [ 0.0486],\n",
+       "          [ 0.1561],\n",
+       "          [-0.0181]]], grad_fn=<SqueezeBackward1>),\n",
+       " torch.Size([2, 4, 1]))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp4 = temp_mp(temp3)\n",
+    "temp4,temp4.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 4])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp4.squeeze(2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# test everything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "temp_conv = nn.Conv1d(3,4,2)\n",
+    "temp_x = torch.randn(3,1,3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "temp_cnn = CNN(3,4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "temp_final = temp_cnn(temp_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 1, 4])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_final.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## code for ModelEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "# Do not change these imports; your module names should be\n",
+    "#   `CNN` in the file `cnn.py`\n",
+    "#   `Highway` in the file `highway.py`\n",
+    "# Uncomment the following two imports once you're ready to run part 1(j)\n",
+    "\n",
+    "from cnn import CNN\n",
+    "from highway import Highway\n",
+    "\n",
+    "\n",
+    "# End \"do not change\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelEmbeddings(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Class that converts input words to their CNN-based embeddings.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, word_embed_size, vocab):\n",
+    "        \"\"\"\n",
+    "        Init the Embedding layer for one language\n",
+    "        @param word_embed_size (int): Embedding size (dimensionality) for the output word\n",
+    "        aka e_word\n",
+    "        \n",
+    "        @param vocab (VocabEntry): VocabEntry object. See vocab.py for documentation.\n",
+    "\n",
+    "        Hints: - You may find len(self.vocab.char2id) useful when create the embedding\n",
+    "        \"\"\"\n",
+    "        super(ModelEmbeddings, self).__init__()\n",
+    "        self.word_embed_size = word_embed_size\n",
+    "        self.vocab = vocab\n",
+    "        self.e_char = 50\n",
+    "        self.char_emb = nn.Embedding(len(vocab.char2id),self.e_char,padding_idx=vocab.char_pad)\n",
+    "        self.highway = Highway(self.word_embed_size)\n",
+    "        self.cnn = CNN(self.e_char,self.word_embed_size)\n",
+    "        self.dropout = nn.Dropout(p=0.3)\n",
+    "    def forward(self, x_padded):\n",
+    "        \"\"\"\n",
+    "        Looks up character-based CNN embeddings for the words in a batch of sentences.\n",
+    "        @param x_padded: Tensor of integers of shape (sentence_length, batch_size, max_word_length) where\n",
+    "            each integer is an index into the character vocabulary\n",
+    "        @param x_word_emb: Tensor of shape (sentence_length, batch_size, word_embed_size), containing the\n",
+    "            CNN-based embeddings for each word of the sentences in the batch\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \n",
+    "#         raw_input x_padded: (max_sentence_length,bs,max_word_length aka m)\n",
+    "#             - each integer is an index into the character vocabulary\n",
+    "#             - this should be output of to_input_tensor_char()\n",
+    "        \n",
+    "#         --char_emb()-->\n",
+    "#         x_emb: (max_sentence_length,bs,max_word_length,e_char)\n",
+    "#             - with e_char is size of character embedding.      \n",
+    "        x_emb = self.char_emb(x_padded)\n",
+    "        \n",
+    "#         --reshape()-->\n",
+    "#         x_reshaped: (max_sentence_length,bs,e_char,max_word_length)\n",
+    "        x_reshaped = x_emb.permute(0,1,3,2)\n",
+    "    \n",
+    "#         --cnn()-->\n",
+    "#         x_conv: (max_sentence_length,bs,e_word,max_word_length-k+1)\n",
+    "#             - with k is kernel size,e_word is the desired word embedding size\n",
+    "#             - do a loop for each sentence\n",
+    "#         --relu_and_globalmaxpool()-->\n",
+    "#         x_conv_out: (max_sentence_length,bs,e_word)\n",
+    "        x_conv_out = self.cnn(x_reshaped)\n",
+    "\n",
+    "#         --high_way()-->\n",
+    "#         x_highway: (max_sentence_length,bs,e_word)\n",
+    "        x_highway = self.highway(x_conv_out)\n",
+    "#         --dropout()-->\n",
+    "#         x_word_emb: (max_sentence_length,bs,e_word)\n",
+    "        x_word_emb = self.dropout(x_highway)\n",
+    "        return x_word_emb\n",
+    "\n",
+    "        \n",
+    "        "
    ]
   }
  ],
