remove for loop for conv1d

--- a/s5/everything.ipynb
+++ b/s5/everything.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        " [[1, 12, 2], [1, 40, 43, 44, 52, 2]]]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "['{', 'k', 'n', 'o', 'w', '}']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "         [ 0,  0,  0,  0,  0,  0,  0,  0]]], device='cuda:0')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,19 +336,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## code for highway"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -358,19 +354,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](../images/ex5_2.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Highway(nn.Module):\n",
@@ -419,10 +411,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test highway\n",
@@ -433,10 +423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -444,7 +432,7 @@
        "torch.Size([4, 3, 2])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,19 +443,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## code for cnn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 171,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
@@ -475,6 +459,7 @@
     "        super().__init__()\n",
     "        self.conv1d = nn.Conv1d(e_char, e_word, kernel_size = k, padding = padding)\n",
     "        self.mp1d = nn.AdaptiveMaxPool1d(1)\n",
+    "        self.e_word = e_word\n",
     "    def forward(self,x_reshaped):\n",
     "        \"\"\"\n",
     "        input: x_reshaped: (max_sentence_length,bs,e_char,max_word_length)\n",
@@ -482,30 +467,38 @@
     "        output:  x_conv_out: (max_sentence_length,bs,e_word)\n",
     "            - e_word is the desired word embedding size\n",
     "        \"\"\"\n",
+    "#         x_conv_out2 = []\n",
+    "#         for each_sen in torch.split(x_reshaped,1,dim=0):\n",
+    "#             each_sen = each_sen.squeeze(dim=0) # bs,e_char,max_word_length\n",
+    "            \n",
+    "#             x_conv = self.conv1d(each_sen) # (bs,e_word,max_word_length-k+1). \n",
+    "#             #relu\n",
+    "#             result = F.relu(x_conv) # (bs,e_word,max_word_length-k+1)\n",
+    "#             #maxpool\n",
+    "#             result = self.mp1d(result).squeeze(2) # (bs,e_word,1) to (bs,e_word) after squeezing\n",
+    "            \n",
+    "#             x_conv_out2.append(result)\n",
+    "            \n",
+    "#         x_conv_out2 = torch.stack(x_conv_out2,dim=0)\n",
     "        \n",
-    "        x_conv_out = []\n",
-    "        for each_sen in torch.split(x_reshaped,1,dim=0):\n",
-    "            each_sen = each_sen.squeeze(dim=0)\n",
-    "            \n",
-    "            x_conv = self.conv1d(each_sen) # (bs,e_word,max_word_length-k+1). \n",
-    "            #relu\n",
-    "            result = F.relu(x_conv) # (bs,e_word,max_word_length-k+1)\n",
-    "            #maxpool\n",
-    "            result = self.mp1d(result).squeeze(2) # (bs,e_word,1) to (bs,e_word) after squeezing\n",
-    "            \n",
-    "            x_conv_out.append(result)\n",
-    "            \n",
-    "        x_conv_out = torch.stack(x_conv_out,dim=0)\n",
+    "        # you can combine first and second dimension to avoid loop while conv1d\n",
+    "        sent_length,bs = x_reshaped.shape[0],x_reshaped.shape[1]\n",
+    "        new_view = (sent_length * bs,x_reshaped.shape[2],x_reshaped.shape[3])        \n",
+    "        x_reshaped2 = x_reshaped.view(new_view)\n",
+    "#         (max_sentence_length * bs ,e_char,max_word_length)\n",
     "        \n",
-    "        return x_conv_out"
+    "        x_conv = self.conv1d(x_reshaped2)  # (sent_length*bs,e_word,max_word_length-k+1).\n",
+    "        x_conv_out = F.relu(x_conv)\n",
+    "        x_conv_out = self.mp1d(x_conv_out).squeeze(-1) # (sent_length*bs,e_word,1) to (sent_length*bs,e_word)\n",
+    "        x_conv_out = x_conv_out.view(sent_length,bs,self.e_word)\n",
+    "        \n",
+    "        return x_conv_out.contiguous()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 172,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test cnn\n",
@@ -514,10 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 173,
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp_w = temp_conv.weight.data\n",
@@ -526,10 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 174,
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp_x = torch.randn(1, 3, 2) # bs,in_channels aka emb size,number_of_items"
@@ -537,21 +526,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 175,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.8009],\n",
-       "         [ 0.6760],\n",
-       "         [-0.6823],\n",
-       "         [ 0.4786]]], grad_fn=<SqueezeBackward1>)"
+       "tensor([[[-0.6414],\n",
+       "         [-0.8552],\n",
+       "         [-0.3947],\n",
+       "         [ 0.2296]]], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,10 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 176,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -574,7 +559,7 @@
        "torch.Size([1, 4, 1])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,18 +570,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 177,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.8009)"
+       "tensor(-0.6414)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,10 +591,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 178,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# testing cnn + maxpool"
@@ -619,10 +600,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 179,
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp_conv = nn.Conv1d(3,4,2)\n",
@@ -632,27 +611,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 180,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[[-0.5329,  0.4910,  0.0598],\n",
-       "          [ 0.0499, -0.5043, -0.3861],\n",
-       "          [-0.2685, -0.0789,  0.1039],\n",
-       "          [ 0.2366, -0.5926,  0.2580]],\n",
+       "(tensor([[[-0.0569, -0.5749,  0.4177],\n",
+       "          [ 0.2825,  0.5814,  0.1241],\n",
+       "          [-0.0021, -0.3691,  0.4847],\n",
+       "          [-0.3763, -0.5331,  0.4839]],\n",
        " \n",
-       "         [[ 0.6947,  0.2658, -0.0774],\n",
-       "          [ 0.0486, -0.1823, -0.0855],\n",
-       "          [ 0.1561, -0.0336, -0.4129],\n",
-       "          [-0.4210, -0.1116, -0.0181]]], grad_fn=<SqueezeBackward1>),\n",
+       "         [[-0.0877,  0.4142, -0.3739],\n",
+       "          [ 1.0563,  0.0531, -0.3173],\n",
+       "          [-0.2251, -0.1101, -1.3916],\n",
+       "          [-0.9606,  0.6323, -0.5496]]], grad_fn=<SqueezeBackward1>),\n",
        " torch.Size([2, 4, 3]))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,10 +640,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 181,
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp_mp = nn.AdaptiveMaxPool1d(1)"
@@ -674,27 +649,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 182,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[[ 0.4910],\n",
-       "          [ 0.0499],\n",
-       "          [ 0.1039],\n",
-       "          [ 0.2580]],\n",
+       "(tensor([[[ 0.4177],\n",
+       "          [ 0.5814],\n",
+       "          [ 0.4847],\n",
+       "          [ 0.4839]],\n",
        " \n",
-       "         [[ 0.6947],\n",
-       "          [ 0.0486],\n",
-       "          [ 0.1561],\n",
-       "          [-0.0181]]], grad_fn=<SqueezeBackward1>),\n",
+       "         [[ 0.4142],\n",
+       "          [ 1.0563],\n",
+       "          [-0.1101],\n",
+       "          [ 0.6323]]], grad_fn=<SqueezeBackward1>),\n",
        " torch.Size([2, 4, 1]))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,10 +679,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 183,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -717,21 +688,19 @@
        "torch.Size([2, 4])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp4.squeeze(2).shape"
+    "temp4.squeeze(-1).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 184,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test everything"
@@ -739,33 +708,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 185,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "temp_conv = nn.Conv1d(3,4,2)\n",
+    "temp_cnn = CNN(3,4,2)\n",
     "temp_x = torch.randn(3,1,3,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "temp_cnn = CNN(3,4,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 186,
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp_final = temp_cnn(temp_x)"
@@ -773,10 +727,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 188,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -784,13 +736,37 @@
        "torch.Size([3, 1, 4])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp_final.shape"
+    "temp_final[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[True, True, True, True]],\n",
+       "\n",
+       "        [[True, True, True, True]],\n",
+       "\n",
+       "        [[True, True, True, True]]])"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_final[0] == temp_final[1]"
    ]
   },
   {
