done with s5. 1 TODO left

--- a/stanford_subword_models.ipynb
+++ b/stanford_subword_models.ipynb
@@ -30,27 +30,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Comparing char model with BPE model (seq2seq machine translation)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/subword_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "(2 graphs on left side) Char model works better for rich morphology language such as Czech rather than French, though the gain is small if you use a more complex model"
    ]
@@ -71,7 +65,7 @@
     "    - [Sennrich, Haddow, Birch, ACL’16a],[Chung, Cho, Bengio, ACL’16].\n",
     "    - BPE\n",
     "- Hybrid architectures:\n",
-    "    - Main model has words; something else for characters\n",
+    "    - Main model has words; use something else for characters\n",
     "    - [Costa-Jussà & Fonollosa, ACL’16], [Luong & Manning, ACL’16]."
    ]
   },
@@ -97,6 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pros\n",
     "- **Automatically decides vocab for system**\n",
     "- No longer strongly “word” based in conventional way"
    ]
@@ -267,7 +262,7 @@
     "- All words with 'le' or 'ile' (conv filter size 2 or 3) are similar to 'while'\n",
     "- Words start with 'rich' are similar to 'richard', but they are not necessarily names\n",
     "\n",
-    "But for LSTM-Char after highway), things are a bit better\n",
+    "But for LSTM-Char (after highway), things are a bit better\n",
     "- Even with 'richard', the similar names coming out of this model are still name, unlike the b4 highway one."
    ]
   },
@@ -291,9 +286,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(also in assignment 5)\n",
+    "\n",
+    "The main idea is that **when our word-level decoder produces an UNK** token, we **run**\n",
+    "our **character-level decoder** (which you can think of as a **character-level conditional language model**) to instead generate the target word one character at a time, \n",
+    "    \n",
     "- A best-of-both-worlds architecture:\n",
     "    - Translate mostly at the word level\n",
-    "    - Only go to the character level when needed (unknown words - words not in vocabulary)"
+    "    - Only go to the character level when needed (unknown words - words not in vocabulary)\n",
+    "    - This helps produce rare and out-of-vocabulary target words"
    ]
   },
   {
@@ -307,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this is a language model"
+    "Note that this is for machine translation"
    ]
   },
   {
@@ -344,14 +345,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# FastText embeddings"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Aim: a next generation efficient word2vec-like word representation library, but **better for rare words and languages with lots of morphology**\n",
     "- An extension of the w2v skip-gram model with character n-grams\n",
@@ -361,14 +366,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/subword_9.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- A word will be broken down using n-grams, for example the word 'where' will be represented by 6 tokens. Note that \"<\" and \">\" are boundary symbols\n",
     "- Using the same w2v mechanism, calculate *similarity* by doing the **dot product between context (neighbor) vector and center-word vector, but now the center-word vector will correspond all 6 of those tokens' vector**. We will sum them together (there's a hashing trick for this)"
